add default user and role
